--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,10 @@
       href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700&family=Poppins&family=Roboto&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="../src/components/SharedLayout/darkTheme.css"
+      rel="stylesheet"
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
